@@ -17,7 +17,6 @@
 package com.rs.game.content.skills.agility;
 
 import com.rs.game.World;
-import com.rs.game.model.entity.Entity;
 import com.rs.game.model.entity.ForceTalk;
 import com.rs.game.model.entity.npc.NPC;
 import com.rs.game.model.entity.player.Skills;
@@ -63,7 +62,7 @@ public class WerewolfAgility {
 		}
 	}
 
-	public static NPCInstanceHandler toFunc = new NPCInstanceHandler(new Object[] { "Agility Trainer", "Agility Boss" }, (npcId, tile) -> new WolfAgilityTrainer(npcId, tile));
+	public static NPCInstanceHandler toFunc = new NPCInstanceHandler(new Object[] { "Agility Trainer", "Agility Boss" }, WolfAgilityTrainer::new);
 	public static NPCClickHandler handleAgilityTrainer = new NPCClickHandler(new Object[]{1664}, e -> {
 		if(e.getPlayer().getInventory().containsItem(4179)) {
 			int stickCount = e.getPlayer().getInventory().getAmountOf(4179);
@@ -86,8 +85,8 @@ public class WerewolfAgility {
 						List<NPC> npcs = e.getPlayer().queryNearbyNPCsByTileRange(1, (npc -> npc.getId() == 1663 && npc.withinDistance(e.getPlayer().getTile(), 4)));
 						if(npcs.size() >= 1) {
 							switch(Utils.random(3)) {
-								case 0 -> npcs.get(0).forceTalk("Now a true test of teeth...");
-								case 1 -> npcs.get(0).forceTalk("Don't let the spikes or the blood put you off...");
+								case 0 -> npcs.getFirst().forceTalk("Now a true test of teeth...");
+								case 1 -> npcs.getFirst().forceTalk("Don't let the spikes or the blood put you off...");
 							}
 						}
 						return true;
@@ -106,8 +105,8 @@ public class WerewolfAgility {
 						List<NPC> npcs = e.getPlayer().queryNearbyNPCsByTileRange(10, (npc -> npc.getId() == 1664));
 						if(npcs.size() >= 1)
 							switch(Utils.random(3)) {
-								case 0 -> npcs.get(0).forceTalk("Remember - no stick, no agility bonus!");
-								case 1 -> npcs.get(0).forceTalk("Don't forget to give me the stick when you're done.");
+								case 0 -> npcs.getFirst().forceTalk("Remember - no stick, no agility bonus!");
+								case 1 -> npcs.getFirst().forceTalk("Don't forget to give me the stick when you're done.");
 							}
 						return false;
 					}
@@ -142,11 +141,11 @@ public class WerewolfAgility {
 	private static void yellFetch(ObjectClickEvent e) {
 		List<NPC> npcs = e.getPlayer().queryNearbyNPCsByTileRange(8, (npc -> npc.getId() == 1661));
 		if (npcs.size() >= 1) {
-			npcs.get(0).faceNorth();
-			npcs.get(0).forceTalk("FETCH!!!!!");
+			npcs.getFirst().faceNorth();
+			npcs.getFirst().forceTalk("FETCH!!!!!");
 			WorldTasks.schedule(2, () -> {
-				npcs.get(0).setNextAnimation(new Animation(6547));
-				World.sendProjectile(npcs.get(0), Tile.of(3540, 9911, 0), 1158, 35, 0, 20, 0.6, 20, 50, p -> World.addGroundItem(new Item(4179), Tile.of(3540, 9911, 0), e.getPlayer()));
+				npcs.getFirst().setNextAnimation(new Animation(6547));
+				World.sendProjectile(npcs.getFirst(), Tile.of(3540, 9911, 0), 1158, 35, 0, 20, 0.6, 20, p -> World.addGroundItem(new Item(4179), Tile.of(3540, 9911, 0), e.getPlayer()));
 			});
 		}
 	}
